<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OnlyKino</string>
    <string name="language">English</string>

    <!--navigation menu strings-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="nav_home_page">Home Page</string>
    <string name="nav_fav_movies">Favorite movies</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_manage">Manage user</string>
    <string name="nav_log_out">Log out</string>

    <!-- Home Page Strings -->
    <string name="theaters">Finnkino Theaters:</string>
    <string name="search">Search</string>
    <string name="hello">Hello </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>

    <!-- Settings Strings -->
    <string name="settings">Settings</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Finnish</item>
    </string-array>
    <string name="darkmode">Enable Dark mode</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_language">Language</string>

    <!-- Login Strings -->
    <string name="prompt_username">Enter your username</string>
    <string name="prompt_password">Enter your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">invalid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_remember">Remember me</string>
    <string name="login_empty">Please enter all details.</string>
    <string name="login_invalid">Invalid login credentials.</string>

    <!-- register Strings -->
    <string name="register_username">Enter a new username</string>
    <string name="register_password">Enter a new Password</string>
    <string name="register_firstname">Enter your first name</string>
    <string name="register_lastname">Enter your last name</string>
    <string name="register_email">Enter your email address</string>
    <string name="register_title">Registration page</string>
    <string name="register_password_requirements">The Password minimun requirements:\n- Must be atleast 12 characters\n- Must have lower and uppercase Characters</string>
    <string name="register_enter">Please enter</string>
    <string name="register_successful">Registration successful!</string>
    <string name="register_username_taken">Username already taken.</string>
    <string name="register_invalid">please enter a valid username and password</string>

    <!-- Manage user Strings -->
    <string name="manage_title">Manage your data</string>
    <string name="manage_username">Your username is:\n</string>
    <string name="manage_password">Your password is:\n</string>
    <string name="manage_firstname">Your first name is:\n</string>
    <string name="manage_lastname">Your last name is:\n</string>
    <string name="manage_email">Your email is:\n</string>

    <!-- pre-generated strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="search_specific_movie">Search Specific Movie</string>

    <!-- event cell strings -->
    <string name="event">Event</string>

    <!-- calendar strings -->
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>

    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>

    <string name="new_event">New Event</string>
    
    <string name="weekly">Weekly</string>
    
    <!-- event edit strings -->
    <string name="event_name">Name:</string>
    <string name="event_date">Date:</string>
    <string name="event_time">Time:</string>
    <string name="event_save">Save</string>
</resources>