 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings">
        <ListPreference
            app:defaultValue="en"
            app:entries="@array/languages_array"
            app:entryValues="@array/languages_values"
            app:key="language"
            app:title="@string/title_language"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_mode"
            android:title="@string/darkmode" />
        <EditTextPreference
            app:title="Change email address"
            android:key="email"
            android:summary="Email address"/>
        <EditTextPreference
            app:title="Change password"
            android:key="password"/>

    </PreferenceCategory>
</PreferenceScreen>